@@ -38,7 +38,7 @@ public:
 
 	void clearKeys() override;
 
-#ifdef __EMSCRIPTEN__
+#if defined(__EMSCRIPTEN__) || defined(Q_OS_ANDROID)
 	void setEnableEraserOverride(bool enableEraserOverride) override;
 #endif
 
